--- a/src/components/banner.css
+++ b/src/components/banner.css
@@ -1,1 +1,8 @@
-
+img {
+    outline: none;
+    border: none; /* Also removes any default border */
+  }
+  
+  img:focus {
+    outline: none;
+  }
