--- a/src/components/banner.css
+++ b/src/components/banner.css
@@ -6,3 +6,11 @@ img {
   img:focus {
     outline: none;
   }
+  @media(min-width:320px){
+.one{
+  left:-80px !important;
+position: relative;
+}
+    
+    
+  }
